[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Screens/Tapa.png" type="Texture" id=1]
[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/End/EndingSplash.gd" type="Script" id=3]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 1
font_data = ExtResource( 4 )

[node name="EndingSplash" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -130.0
margin_top = -78.0
margin_right = 134.0
margin_bottom = 78.0
color = Color( 0.364706, 0.768627, 0.890196, 1 )

[node name="Splash" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CutsceneTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CutsceneTween" type="Tween" parent="."]

[node name="ThanksLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = -470.0
margin_top = -114.0
margin_right = 275.0
margin_bottom = -42.0
rect_scale = Vector2( 0.292093, 0.292093 )
rect_pivot_offset = Vector2( 512, 64 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Gracias por jugar!"
align = 1
valign = 1

[node name="VerInvitacion" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = 21.0
margin_right = 134.0
margin_bottom = 85.0
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 2
text = "Ver Invitacion"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2, 22 )
offset = Vector2( 0, -23 )
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0

[node name="Transition" parent="Camera2D" instance=ExtResource( 2 )]
visible = false
margin_left = -520.0
margin_top = -335.0
margin_right = 504.0
margin_bottom = 265.0
mouse_filter = 2
start_closed = true

[connection signal="timeout" from="CutsceneTimer" to="." method="_on_CutsceneTimer_timeout"]
[connection signal="pressed" from="VerInvitacion" to="." method="_on_VerInvitacion_pressed"]
